third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/inline-parity/multi_param.exp

Diagnostics:
error: captured variable `result` cannot be modified inside of a lambda
   ┌─ tests/checking-lang-v2.2/lambda/inline-parity/multi_param.move:21:13
   │
21 │             result = result + f(&elem.k, &mut elem.v);
   │             ^^^^^^
